--- a/css/full_page_scroll.css
+++ b/css/full_page_scroll.css
@@ -34,10 +34,9 @@ body {
 	position: relative;
 	height: 100vh;
 	overflow: hidden;
-	font-size: 10vmin;
-	padding: 1em;
+	/*font-size: 10vmin;*/
 	box-sizing: border-box;
-	color: hsla(0, 0%, 100%, .1);
+	/*color: hsla(0, 0%, 100%, .1);*/
 	cursor: default;
 }
 
