--- a/css/particleground.css
+++ b/css/particleground.css
@@ -1,5 +1,8 @@
-#particles {
+.particles_bg {
+    position: absolute;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     overflow: hidden;
+    background: #16a085;
+    z-index: 0;
 }
